<resources>
    <string name="app_name">Chat App</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dialog_message">Registration was not successful!</string>
    <string name="dialog_title">Error</string>
    <string name="sample_message">message</string>
    <string name="login_dialog_title">Error</string>
    <string name="login_dialog_message">Incorrect username or password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="photo_fragment">Hello photo fragment</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_fragment">Login blank fragment</string>
    <string name="register_fragment">Register blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_about">About</string>
    <string name="photo">Photo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

</resources>