<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterFragment"
    android:gravity="bottom"
    >

    <AutoCompleteTextView
        android:id="@+id/register_username"
        android:hint="@string/prompt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextviewStyle"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:textIsSelectable="false"
        />


    <AutoCompleteTextView
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextviewStyle"
        android:hint="@string/prompt_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textIsSelectable="false"
         />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextviewStyle"
        android:hint="@string/prompt_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        />


    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextviewStyle"
        android:hint="@string/prompt_password_again"
        android:imeActionId="100"
        android:imeActionLabel="@string/action_sign_up"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
       />

    <Button
        android:id="@+id/register_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_margin="10dp"
        android:background="@drawable/btn_rounded"
        android:textColor="@color/white"
        android:text="@string/action_sign_up"
        android:textStyle="bold"
        />


</LinearLayout>